[metadata]
name = pivtestdata
version = 0.2.0
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Repository providing PIV test data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/piv-test-data
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    appdirs>=1.4.4
    requests
    opencv-python>=4.5.3.56
    pco_tools>=1.0.0
    numpy
    matplotlib
    pivimage @ git+https://github.com/matthiasprobst/pivimage@main

[options.extras_require]
test =
    numpy
    pytest

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests
